--- a/t9-app/src/index.css
+++ b/t9-app/src/index.css
@@ -14,6 +14,9 @@
 
 body {
   margin: 0;
+  width: 100%;
+  display: flex;
+  background-color: rgb(20, 20, 20);
   /* min-width: 320px;
   min-height: 100vh; */
 }
